--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="app-header">
       <h1>Conditional Pinwheel Randomiser</h1>
       <p class="app-tagline">
-        Configure wheels, pick paths, watch the spins, and get a full summary of the run.
+        Weighted wheels, random pickers, and a clean visual summary of your path.
       </p>
     </header>
 
