--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Conditional Pinwheel Randomiser</title>
+  <title>RNG</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
   <div class="app-shell">
     <header class="app-header">
-      <h1>Conditional Pinwheel Randomiser</h1>
-      <p class="app-tagline">
-        Weighted wheels, random pickers, and a clean visual summary of your path.
-      </p>
+      <h1>RNG</h1>
     </header>
 
     <main class="app-main">
